Implemented -f and -g options.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -88,7 +88,7 @@
         "lines-between-class-members": "error",
         "max-depth": 0,
         "max-len": "off",
-        "max-lines": "error",
+        "max-lines": 0,
         "max-nested-callbacks": "error",
         "max-params": [
             "error",
