--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "name": "Launch Program",
             "program": "${workspaceFolder}/gift-picker.js",
             "args": [
+                "--file", "sample.json",
                 "--logging",
                 "--demo"
             ]
