Can now install the command line program with npm install -g

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "Pat Barnes",
   "license": "MIT",
+  "bin": {
+    "gift-picker": "./gift-picker.js"
+  },
   "bugs": {
     "url": "https://github.com/opbarnes/gift-picker/issues"
   },
